--- a/src/app/shared/dialogs/add-grn/add-grn.component.html
+++ b/src/app/shared/dialogs/add-grn/add-grn.component.html
@@ -1,19 +1,28 @@
-<div class="header-add-edit-dialog">
-  <h1 mat-dialog-title class="light-grey">Direct Receipts via system</h1>
-  <button type="button" class="close" (click)="cancel()" aria-label="Close">
-    <span aria-hidden="true">×</span>
-  </button>
-</div>
 <div mat-dialog-content>
-  <mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper>
-    <mat-step stepControl="Add Materials">
-      <ng-template matStepLabel>Add Materials</ng-template>
-      <app-add-material #myMaterial> </app-add-material>
-    </mat-step>
-    <mat-step stepControl="Add Supplier">
-      <ng-template matStepLabel>Add Supplier</ng-template>
-      <app-add-supplier *ngIf="materialList.length" [projectId]="this.data" [materialList]="this.materialList" [countryList]="this.countryList" [supplierList]="this.supplierList">
-      </app-add-supplier>
-    </mat-step>
-  </mat-horizontal-stepper>
+
+  <div class="modal-header">
+    <h5 mat-dialog-title class="mb-0">Direct Receipts via system</h5>
+
+    <button type="button" class="close" (click)="cancel()" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper>
+
+      <mat-step stepControl="Add Materials">
+        <ng-template matStepLabel>Add Materials</ng-template>
+        <app-add-material #myMaterial> </app-add-material>
+      </mat-step>
+
+      <mat-step stepControl="Add Supplier">
+        <ng-template matStepLabel>Add Supplier</ng-template>
+        <app-add-supplier *ngIf="materialList.length" [projectId]="this.data" [materialList]="this.materialList"
+          [countryList]="this.countryList" [supplierList]="this.supplierList">
+        </app-add-supplier>
+      </mat-step>
+
+    </mat-horizontal-stepper>
+  </div>
 </div>
