add custom material & add receipt via system dialogs make responsive

--- a/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
+++ b/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
@@ -92,7 +92,7 @@
           </div>
 
           <!-- Add Button Field -->
-          <div class="col-md-1 col-xs-12 col-add-btn display-flex align-center justify-content-end">
+          <div class="col-md-1 col-xs-12 col-add-btn display-flex align-items-center justify-content-end">
             <span *ngIf="addMaterialsForm.get('addMaterial')['controls'].length > 1" matRipple
               class="cursor-pointer p-r-5" (click)="deleteField(i)">
               <img src="../../../../assets/images/delete-button.png" />
