--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -15,7 +15,7 @@
         <div class="row p-t-10 mobile-padding" [formGroupName]="i">
 
           <!-- Material Name Input Field -->
-          <div class="" [ngClass]="this.data ? 'col-md-2 col-material-name col-xs-12' : 'col-md-4 col-xs-12'">
+          <div [ngClass]="this.data ? 'col-md-2 col-material-name col-sm-6 col-xs-12' : 'col-md-4 col-sm-6 col-xs-12'">
             <mat-form-field class="border-input w-100">
               <input type="text" placeholder="Material Name*" matInput formControlName="materialName" />
               <small
@@ -25,7 +25,7 @@
           </div>
 
           <!-- Material Unit Dropdown Field -->
-          <div class="" [ngClass]="this.data ? 'col-md-1 col-unit col-xs-5' : 'col-md-2 col-xs-12'">
+          <div [ngClass]="this.data ? 'col-md-1 col-unit col-sm-6 col-xs-5' : 'col-md-2 col-sm-6 col-xs-12'">
             <mat-form-field class="border-select w-100 mat-form-field-flex-mm-padding">
               <mat-label class="mat-select-trades">Unit*</mat-label>
               <mat-select formControlName="materialUnit">
@@ -46,7 +46,7 @@
           </div>
 
           <!-- Quantity Input Field -->
-          <div *ngIf="this.data" class="col-md-2 col-xs-7">
+          <div *ngIf="this.data" class="col-md-2 col-sm-6 col-xs-7">
             <mat-form-field class="border-input w-100">
               <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text"
                 placeholder="Quantity*" />
@@ -54,7 +54,7 @@
           </div>
 
           <!-- Unit Rate Input Field -->
-          <div *ngIf="this.data" class="col-md-2 col-xs-12 col-unit-rate">
+          <div *ngIf="this.data" class="col-md-2 col-sm-6 col-xs-12 col-unit-rate">
             <mat-form-field class="border-input w-100">
               <input formControlName="estimatedPrice" appTwoDigitDecimaNumber matInput type="text"
                 placeholder="Unit Rate({{ this.currencyCode }})" />
@@ -62,7 +62,7 @@
           </div>
 
           <!-- Trade Dropdown Field -->
-          <div class="" [ngClass]="this.data ? 'col-md-2 col-xs-12' : 'col-md-3 col-xs-12'">
+          <div [ngClass]="this.data ? 'col-md-2 col-sm-6 col-xs-12' : 'col-md-3 col-sm-6 col-xs-12'">
             <mat-form-field class="border-select w-100 mat-form-field-flex-mm-padding">
               <mat-label>Trade*</mat-label>
               <mat-select formControlName="trade">
@@ -82,7 +82,7 @@
           </div>
 
           <!-- Category Dropdown Field -->
-          <div class="" [ngClass]="this.data ? 'col-md-2 col-xs-12' : 'col-md-3 col-xs-12'">
+          <div [ngClass]="this.data ? 'col-md-2 col-sm-6 col-xs-12' : 'col-md-3 col-sm-6 col-xs-12'">
             <mat-form-field class="border-select w-100 mat-form-field-flex-mm-padding">
               <mat-label>Category*</mat-label>
               <mat-select formControlName="category">
@@ -103,8 +103,7 @@
           </div>
 
           <!-- Add Button Field -->
-          <div class="col-md-1 col-xs-12 col-add-btn display-flex align-items-center justify-content-end">
-            <!-- [ngClass]="this.firefox ? 'p-l-0' : 'p-l-5'" -->
+          <div class="col-md-1 col-sm-12 col-xs-12 col-add-btn display-flex align-items-center justify-content-end">
             <a href="javascript:void(0)" *ngIf="addMyMaterial.get('myMaterial').value.length > 1"
               class="width-15-px cursor-pointer" (click)="onDelete(i)">
               <img src="../../../../assets/images/delete-button.png" />
